--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -449,3 +449,26 @@ dataSources:
         - event: Swap(bytes32,bytes32,bytes32,bytes32)
           handler: handleSwap
       file: ./src/otc-swap-asset-manager.ts
+  - kind: ethereum
+    name: GeneralDefiIntegrationAssetManager
+    network: mainnet
+    source:
+      address: "0x1c32f8818e38a50d37d1E98c72B9516a50985227"
+      abi: GeneralDefiIntegrationAssetManager
+      startBlock: 19758958
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      entities:
+        - DefiIntegration
+        - GeneralDefiIntegrationAssetManagerOwnershipTransferred
+      abis:
+        - name: GeneralDefiIntegrationAssetManager
+          file: ./abis/GeneralDefiIntegrationAssetManager.json
+      eventHandlers:
+        - event: DefiIntegration(address,bytes32[],bytes32[],uint256[],bytes32[])
+          handler: handleDefiIntegration
+        - event: OwnershipTransferred(indexed address,indexed address)
+          handler: handleOwnershipTransferred
+      file: ./src/general-defi-integration-asset-manager.ts
