--- a/subgraph-arbitrum.yaml
+++ b/subgraph-arbitrum.yaml
@@ -200,7 +200,7 @@ dataSources:
       file: ./src/nft-asset-manager.ts
   - kind: ethereum
     name: OTCSwapAssetManager
-    network: mainnet
+    network: arbitrum-one
     source:
       address: "0xcbFA6BB3eb4Bd9BF97866baE75FfB62f3aE897c0"
       abi: OTCSwapAssetManager
@@ -221,3 +221,26 @@ dataSources:
         - event: Swap(bytes32,bytes32,bytes32,bytes32)
           handler: handleSwap
       file: ./src/otc-swap-asset-manager.ts
+  - kind: ethereum
+    name: GeneralDefiIntegrationAssetManager
+    network: arbitrum-one
+    source:
+      address: "0x2e4f46038E998663Bf8E907817B02C05Ada65BD7"
+      abi: GeneralDefiIntegrationAssetManager
+      startBlock: 239264172
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      entities:
+        - DefiIntegration
+        - GeneralDefiIntegrationAssetManagerOwnershipTransferred
+      abis:
+        - name: GeneralDefiIntegrationAssetManager
+          file: ./abis/GeneralDefiIntegrationAssetManager.json
+      eventHandlers:
+        - event: DefiIntegration(address,bytes32[],bytes32[],uint256[],bytes32[])
+          handler: handleDefiIntegration
+        - event: OwnershipTransferred(indexed address,indexed address)
+          handler: handleOwnershipTransferred
+      file: ./src/general-defi-integration-asset-manager.ts
