--- a/subgraph-base.yaml
+++ b/subgraph-base.yaml
@@ -8,9 +8,9 @@ dataSources:
     name: DarkpoolAssetManager
     network: base
     source:
-      address: "0x0"
+      address: "0x84eb120A35802460484015e6748375369e40468a"
       abi: DarkpoolAssetManager
-      startBlock: 0
+      startBlock: 18807627
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -43,9 +43,9 @@ dataSources:
     name: UniswapSwapAssetManager
     network: base
     source:
-      address: "0x0"
+      address: "0x6bb88BF6Ca504C00C6B451d1B547C305850050C6"
       abi: UniswapSwapAssetManager
-      startBlock: 0
+      startBlock: 18807627
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -63,9 +63,9 @@ dataSources:
     name: UniswapLiquidityAssetManager
     network: base
     source:
-      address: "0x0"
+      address: "0xEC45a7379Ce48EcCdA153664D789A4Da00153b52"
       abi: UniswapLiquidityAssetManager
-      startBlock: 0
+      startBlock: 18807627
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -89,9 +89,9 @@ dataSources:
     name: StakingAssetManager
     network: base
     source:
-      address: "0x0"
+      address: "0xa3d27E1Ca5057372478011FB781479B8A1fF7AA3"
       abi: StakingAssetManager
-      startBlock: 0
+      startBlock: 18807627
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -112,9 +112,9 @@ dataSources:
     name: SablierLinearAssetManager
     network: base
     source:
-      address: "0x0"
+      address: "0x4d459dDe25707CA353De15CC3B85b7C2e4bb380c"
       abi: SablierLinearAssetManager
-      startBlock: 0
+      startBlock: 18807627
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -135,9 +135,9 @@ dataSources:
     name: SablierDynamicAssetManager
     network: base
     source:
-      address: "0x0"
+      address: "0xc98b275a309F187b691e025B956e03603e12b420"
       abi: SablierDynamicAssetManager
-      startBlock: 0
+      startBlock: 18807627
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -158,9 +158,9 @@ dataSources:
     name: NftAssetManager
     network: base
     source:
-      address: "0x0"
+      address: "0xC4e979C922E93938dBaBb6e1623a19cbc6132489"
       abi: NftAssetManager
-      startBlock: 0
+      startBlock: 18807627
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -181,9 +181,9 @@ dataSources:
     name: OTCSwapAssetManager
     network: base
     source:
-      address: "0x0"
+      address: "0x3D76Fd85FCc2593970d22Aa34bcC4c5444c57c9D"
       abi: OTCSwapAssetManager
-      startBlock: 0
+      startBlock: 18807627
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -201,9 +201,9 @@ dataSources:
     name: GeneralDefiIntegrationAssetManager
     network: base
     source:
-      address: "0x0"
+      address: "0x53e5A08c95CF866E34F2A6A685ee9f90366e154E"
       abi: GeneralDefiIntegrationAssetManager
-      startBlock: 0
+      startBlock: 18807627
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -221,9 +221,9 @@ dataSources:
     name: AerodromeSwapAssetManager
     network: base
     source:
-      address: "0x0"
+      address: "0x159F3668c72BBeCdF1fb31beeD606Ec9649654eB"
       abi: AerodromeSwapAssetManager
-      startBlock: 0
+      startBlock: 18807627
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -241,9 +241,9 @@ dataSources:
     name: AerodromeAddLiquidityAssetManager
     network: base
     source:
-      address: "0x0"
+      address: "0xfBf0dDceF9360757fCA368911b6719a35DD8C660"
       abi: AerodromeAddLiquidityAssetManager
-      startBlock: 0
+      startBlock: 18807627
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -264,9 +264,9 @@ dataSources:
     name: AerodromeRemoveLiquidityAssetManager
     network: base
     source:
-      address: "0x0"
+      address: "0xB1CC5D9227323330E8a58e891c123B38D03f0BAA"
       abi: AerodromeRemoveLiquidityAssetManager
-      startBlock: 0
+      startBlock: 18807627
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
